# team-chaos-monkeys

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore.yaml  CLAUDE.md  README.md  docker-compose.demo.yml  docker-compose.override.yml.example  docker-compose.yml  package-lock.json  redocly.yaml  task-description.md  tmp-backlog.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS
api/: README.md  openapi.yaml
client/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  orval.config.ts  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
deploy/: README.md  docker-compose.prod.yml
docs/: README.md  api-security.md  architecture.md  class_diagram.puml  domain-events.md  local-k8s.md  photo-storage.md  problem-statement.md
edge/: nginx.conf
services/genai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/genai-service/app/: answer.py  config.py  dependencies.py  embedding.py  errors.py  exceptions.py  extraction.py  generation.py  image.py  logging_config.py  main.py  metrics.py  middleware.py  model_info.py  tracing.py  verification.py
services/genai-service/app/api/: answer.py  diagnostic.py  embed.py  extract.py  generate.py  health.py  schemas.py  verify.py
services/genai-service/app/providers/: __init__.py  fake.py  ollama.py  openai.py
services/genai-service/docs/adr/: 0001-image-attribute-extraction.md  0002-no-grpc-no-langchain.md
services/genai-service/tests/: conftest.py  test_answer.py  test_answer_route.py  test_build_provider_fake.py  test_diagnostic.py  test_embed.py  test_embedding.py  test_extract_attributes.py  test_extract_attributes_image.py  test_extraction.py  test_generate_message.py  test_generation.py  test_golden_compare.py  test_golden_set.py  test_health.py  test_image.py  test_logging_config.py  test_metrics.py  test_model_info.py  test_provider_contract.py  test_provider_fake_dimensions.py  test_provider_ollama_dimensions.py  test_provider_openai_dimensions.py  test_settings.py  test_settings_embedding_dim.py  test_startup_probe.py  test_tracing.py  test_verification.py  test_verify_match.py
services/genai-service/tests/golden/: __init__.py  _compare.py  _contract.py  golden_set.json
services/genai-service/tests/integration/: test_golden_extraction.py  test_real_answer.py  test_real_generation.py  test_real_openai_provider.py  test_real_provider.py  test_real_verification.py
(+812 files in other folders)
