[project]
name = "genai-service"
version = "0.1.0"
description = "FoundFlow GenAI service — attribute extraction, embeddings, notification text generation."
requires-python = ">=3.12"
dependencies = [
    # prometheus-fastapi-instrumentator 7.x assumes every app route has
    # `.path`; newer FastAPI releases add internal router entries that do not.
    "fastapi>=0.115,<0.124",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.55",
    "ollama>=0.4",
    "pillow>=10.4,<12",
    "prometheus-client>=0.21",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-sdk>=1.29",
    # http exporter only — Tempo's OTLP receiver on 4318; the grpc variant
    # would drag in grpcio for nothing.
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "respx>=0.21",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Defaults are E4 (pycodestyle: imports), E7 (statement),
# E9 (syntax/runtime), F (pyflakes). Add I for isort so import
# order drift fails CI alongside the unused-import / undefined-name
# checks that already do.
extend-select = ["I"]
